fix styling bug on mobile for page close button

--- a/src/style.css
+++ b/src/style.css
@@ -119,6 +119,7 @@ a:visited {
 
 #page-close {
 	aspect-ratio: 1;
+	min-height: 0;
 	display: flex;
 	align-items: center;
 	justify-content: center;
